# AstryxOS

./: .gitignore  AI_CONTRIBUTING.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HUMAN_CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.sh  rust-toolchain.toml
.ai/: PLAN.md  PROGRESS.md  ROADMAP.md  STYLE_GUIDE.md  firefox_plan.md
.github/: dependabot.yml
.perf/: baseline.json
bootloader/: Cargo.toml
bootloader/src/: framebuffer.rs  loader.rs  main.rs  paging.rs
ci/: allow-fail.json
docs/: AF_INET_ACCEPT_2026-05-23.md  BUSYBOX_CLI_PIVOT_2026-05-23.md  CLOUDINIT_AUDIT_2026-05-23.md  D21_B1_VS_B2_DETERMINATION_2026-05-23.md  D21_CROSSWALK_2026-05-23.md  D22_FALSIFICATION_CROSSWALK_2026-05-23.md  DEVELOPMENT_PLAN.md  DIFFERENTIAL_HARNESS_2026-05-23.md  EBPF_AUDIT_2026-05-23.md  FF_CRITICAL_PATH_GAP_MATRIX_2026-05-23.md  FIREFOX_PORT_ROADMAP.md  FS_AUDIT_2026-04-23.md  FUTEX_WAKE_EXIT_INVESTIGATION_2026-05-23.md  GDB_AUTOPSY_2026-05-23.md  Gemfile  HARNESS.md  HARNESS_FLAG_PRESERVATION_2026-05-23.md  HTTPD_SERVICE_DEMO_2026-05-23.md  I1B_TOKIO_BACKFILLS_2026-05-23.md  INFRASVC_ORACLE_AUDIT_2026-05-23.md  KSTACK_PRESSURE_COMPARISON_2026-05-22.md  LIBSTDCXX_RELOC_GAP_2026-05-29.md  LIBXUL_SSP_SHAPE_AUDIT_2026-05-23.md  LINUX_GROUND_TRUTH_FF_2026-05-22.md  LINUX_RBP_GROUND_TRUTH_2026-05-23.md  LINUX_SYSCALL_COVERAGE.md  MOZILLA_BZ_PATTERNS_2026-05-23.md  MUSL_ABI_COMPLETENESS_AUDIT_2026-05-30.md  MUSL_STRATEGIC_RESEARCH_2026-05-23.md  ORACLE_DAEMON_2026-05-23.md  ORACLE_DT_NEEDED_CLOSURE_2026-05-23.md  ORACLE_FIRST_BOOT_2026-05-23.md  PID1_EXIT_GROUP_NEG13_INVESTIGATION_2026-05-23.md  PID2_PAGE_FAULT_LOOP_INVESTIGATION_2026-05-17.md  PIVOT_E_2026-05-24.md  PIVOT_E_TIER_C_2026-05-24.md  PIVOT_E_TIER_D_2026-05-24.md  PNG2_TID2_FUTEX_WAKE_DRILL_2026-05-17.md  PNG_STRATEGY_GLIBC_COMPARE_2026-05-17.md  PTY_SUBSTRATE_2026-05-24.md  (+34 more)
kernel/: Cargo.toml  build.rs  linker.ld  x86_64-astryx.json
kernel/src/: boot_config.rs  busybox_demo.rs  coverage.rs  ff_out_png.rs  httpd_demo.rs  kdb.rs  main.rs  oracle_demo.rs  pivot_e_demo.rs  pivot_e_git_demo.rs  pivot_e_tui_demo.rs  prop_test.rs  signal.rs  sshd_demo.rs  test_runner.rs  tls_demo.rs  webxo_demo.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: apic.rs  db582.rs  debug_reg.rs  gdt.rs  idt.rs  irq.rs  mod.rs  smap.rs  ubreak.rs
kernel/src/config/: mod.rs
kernel/src/drivers/: ac97.rs  ahci.rs  ata.rs  blk_trace.rs  block.rs  keyboard.rs  log_ring.rs  mod.rs  mouse.rs  partition.rs  pci.rs  pty.rs  rtc.rs  serial.rs  tty.rs  virtio_blk.rs  virtio_input.rs  virtio_serial.rs  vmware_svga.rs
kernel/src/drivers/console/: font8x16.rs  mod.rs
kernel/src/drivers/usb/: mod.rs  xhci.rs
kernel/src/ex/: fast_mutex.rs  mod.rs  push_lock.rs  resource.rs  work_queue.rs
kernel/src/gdi/: bitblt.rs  dc.rs  mod.rs  png.rs  primitives.rs  region.rs  surface.rs  text.rs
kernel/src/gui/: calculator.rs  compositor.rs  content.rs  desktop.rs  editor.rs  input.rs  interaction.rs  mod.rs  terminal.rs  terminal.rs.bak
kernel/src/hal/: mod.rs
kernel/src/init/: mod.rs
kernel/src/io/: async_io.rs  completion.rs  devmgr.rs  mod.rs
kernel/src/ipc/: epoll.rs  eventfd.rs  inotify.rs  mod.rs  pipe.rs  signalfd.rs  sysv_shm.rs  timerfd.rs  waitlist.rs
kernel/src/ke/: apc.rs  bugcheck.rs  dispatcher.rs  dpc.rs  event.rs  gp_trap_diag.rs  irql.rs  mod.rs  mutant.rs  semaphore.rs  timer.rs  wait.rs
kernel/src/lpc/: mod.rs
kernel/src/mm/: cache.rs  dma_pin.rs  file_buf_witness.rs  heap.rs  mod.rs  oom.rs  pmm.rs  refcount.rs  stack_prov.rs  tlb.rs  vma.rs  vma_dump.rs  vmm.rs  w215_crc.rs  w215_diag.rs  w215_wptrap.rs
kernel/src/msg/: dispatch.rs  input.rs  message.rs  mod.rs  queue.rs
kernel/src/net/: arp.rs  dhcp.rs  dns.rs  e1000.rs  ethernet.rs  icmp.rs  icmpv6.rs  ipv4.rs  ipv6.rs  ipver.rs  loopback.rs  mod.rs  netlink.rs  socket.rs  tcp.rs  udp.rs  unix.rs  virtio_net.rs
kernel/src/nt/: kuser_shared.rs  mod.rs
kernel/src/ob/: handle.rs  mod.rs
kernel/src/perf/: mod.rs
kernel/src/po/: acpi.rs  mod.rs  power.rs  shutdown.rs
kernel/src/proc/: ascension_elf.rs  elf.rs  hello_elf.rs  hello_pe.rs  hello_win32_pe.rs  mod.rs  native_hello_elf.rs  orbit_elf.rs  pe.rs  proc_metrics.rs  qga_elf.rs  sample.rs  stack_walk.rs  thread.rs  usermode.rs  vdso.rs
kernel/src/record_replay/: mod.rs
kernel/src/sched/: alias_probe.rs  mod.rs  percpu.rs
kernel/src/security/: mod.rs  privilege.rs  rand.rs  sid.rs  token.rs
kernel/src/shell/: mod.rs
kernel/src/subsys/: mod.rs
kernel/src/subsys/aether/: mod.rs  syscall.rs
kernel/src/subsys/linux/: clone_args_diag.rs  d15_mthread_watch.rs  d16_canary_watch.rs  d17_aliasing_test.rs  d20_kstack_canary_watch.rs  d21_user_canary_watch.rs  d22_user_canary_phys.rs  d7_bss_watch.rs  d8_fault_tls_dump.rs  elf_write_trace.rs  errno.rs  f3_code_dr_watch.rs  f3_code_dr_write_watch.rs  f3_watch.rs  fs_base_trace.rs  futex_cluster.rs  futex_key_diag.rs  mod.rs  ssp_diag.rs  syscall.rs  vfork_diag.rs
kernel/src/subsys/win32/: mod.rs
kernel/src/syscall/: mod.rs  ring.rs
kernel/src/util/: dmesg.rs  mod.rs  no_alloc_fmt.rs
kernel/src/vfs/: ext2.rs  fat32.rs  mod.rs  ntfs.rs  path_cache.rs  procfs.rs  ramfs.rs  sysfs.rs  tmpfs.rs
kernel/src/win32/: mod.rs
kernel/src/wm/: class.rs  decorator.rs  desktop.rs  hittest.rs  mod.rs  window.rs  zorder.rs
kernel/src/x11/: atoms.rs  event.rs  mod.rs  mod.rs.bak  proto.rs  resource.rs
kernel/vdso/: build.sh  vdso.S  vdso.c  vdso.lds
tools/: README.md  (+3 more)
userspace/ascension/: Cargo.toml
userspace/ascension/src/: main.rs
userspace/libsys/: Cargo.toml
userspace/libsys/src/: auxv.rs  errno.rs  lib.rs  posix.rs
userspace/orbit/: Cargo.toml
userspace/orbit/src/: main.rs
userspace/qga/: Cargo.toml
userspace/qga/.cargo/: config.toml
userspace/qga/src/: base64.rs  handles.rs  json.rs  main.rs  proto.rs
userspace/sdk/aether-sys/: Cargo.toml
userspace/sdk/aether-sys/src/: lib.rs
userspace/sdk/native_hello/: Cargo.toml
userspace/sdk/native_hello/.cargo/: config.toml
userspace/sdk/native_hello/src/: main.rs
(+139 files in other folders)
