[package]
name = "astryx-kernel"
version.workspace = true
edition.workspace = true

[features]
default = []
test-mode = []
gui-test = []
firefox-test = []
# W133: opt-out for cross-CPU TLB shootdown.  Default builds run the full
# shootdown protocol (IPI vector 0xF0, per-CPU active-CR3 mask).  Enable
# this feature only for bisect/baseline runs where you want to compare
# against the pre-PR behaviour — correctness on SMP requires shootdown.
tlb-shootdown-off = []
# Opt-in "soft-pass" network tests that depend on QEMU SLIRP actually
# delivering ICMP echo replies and forwarding DNS queries.  These tests
# (Test 5 ping 8.8.8.8, Test 6 DNS, Test 32 IPv6 DNS, Test 33 IPv6 ping)
# historically passed even when the operation returned no result, which
# made genuine network-stack regressions invisible in CI.  They are now
# off by default and only built into the runner when this feature is
# enabled alongside `test-mode`.  See docs/HARNESS.md.
network-tests = []
# Re-enables test 82 (Win32 PE32+ hello_win32.exe). Currently hangs the
# headless runner — the embedded PE spins in Ring 3 without calling
# ExitProcess under the current scheduler timing. Off by default.
win32-pe-test = []
# Keep the old 8x16 bitmap rectangle placeholder for title-bar text instead of
# using the GDI text engine. Disabled by default; re-enable if the GDI path
# triggers any rendering issue before it is fully validated.
bitmap-title-fallback = []
# Tier-0 syscall tracing. Emits one `[SC] pid=.. tid=.. nr=.. rip=.. a1=.. a2=.. a3=..`
# line per Linux syscall entry on the serial console. Off by default; enable
# alongside `firefox-test` when debugging user-mode regressions via
# `qemu-harness.py grep <sid> '^\[SC\] '`. See docs/HARNESS.md.
syscall-trace = []
# Verbose firefox-test tracing.  By default `firefox-test` keeps only the
# essential per-syscall pair (`[SC]` / `[SC-RET]` under `syscall-trace`) plus
# boot banners and the periodic `tick=...` heartbeat — the minimum signal
# needed to measure demo throughput.  Enable this flag to also emit
# `[LINUX-SYS]`, `[MMAP]`, `[FFTEST/mmap-so]`, and `[SC-USTACK]` traces, which
# are useful when symbolising libxul stacks or debugging early mmap failures
# but add ~300 bytes of serial output per syscall.  At ~3 KVM VM-exits per
# 16-byte FIFO chunk that extra volume directly pins CPU 2 in the serial
# driver under nested-virt KVM and prevents the post-#140 throughput from
# being observed.  See drivers/serial.rs for the FIFO-batched write path.
firefox-trace-verbose = []
# Tier-0 page-fault tracing. Emits one `[PF] cr2=.. rip=.. code=.. pid=.. tid=..`
# line per #PF (before VMA resolution). Pairs with `syscall-trace` to make a
# full cause-and-effect stream for Ring 3 crashes. See docs/HARNESS.md.
pf-trace = []
# Tier-1 in-kernel debugger. Opens a read-only JSON introspection TCP server
# on port 9999 (proc-list, proc, vfs-mounts, dmesg, syms, mem, trace-status,
# ping). Driven by `scripts/qemu-harness.py kdb`. Default builds are
# byte-identical to the pre-kdb artefact; every code path is cfg-gated.
# See docs/HARNESS.md.
kdb = []
# Builds a self-test for the fault-immune bugcheck banner printer.
# When enabled (alongside `test-mode`), `test_runner::run` first invokes
# `kernel/src/util/no_alloc_fmt.rs::tests::run_self_tests` to validate
# the stack-only formatters, then triggers a deliberate kernel-mode
# page fault and asserts the banner is emitted cleanly with no
# secondary "fault while formatting" message.  The test halts that
# vCPU on completion (the bugcheck path exits QEMU via isa-debug-exit
# in test-mode), so this feature is OFF by default.
bugcheck-test = []
# PR #127 review caveat: direct test of the re-entrancy guard inside
# `ke::bugcheck`.  When enabled, the bugcheck printer takes a fresh
# deliberate #PF *after* it has emitted its full banner, re-entering
# `ke_bugcheck`; the entry-point guard then emits a single
# "RE-ENTERED BUGCHECK" line and exits QEMU.  The harness verifies the
# RE-ENTERED line is present in the serial log and the QEMU exit code
# is the bugcheck-failure code.  Like `bugcheck-test`, this feature
# is mutually exclusive with a clean test-suite pass (the bugcheck
# path exits QEMU before the normal suite finishes), so it is OFF
# by default and gated behind its own CI job.
bugcheck-reentry-test = ["bugcheck-test"]
# Detailed stack dump (128 words from RSP) on every FUTEX_WAIT registration.
# Expensive under IRQs-off (~130ms cli per FUTEX_WAIT); disabled by default
# even in firefox-test. Use `--features futex-wait-scan` explicitly when
# debugging user-mode futex choreography. Pairs with [FUTEX_WAIT_STACK] and
# [FUTEX_WAIT_REG] lines to form a complete per-waiter trace.
futex-wait-scan = []
# QGA (QEMU Guest Agent) transport: enables the virtio-serial driver and the
# `/dev/vport0p0` character device node that the future userspace QGA daemon
# (Phase QGA-2) will open.  Pair with the harness `--features qga` flag,
# which adds the matching `virtio-serial-pci` + `virtserialport` device on
# the host side.  See virtio 1.2 §5.3 (Console Device).
qga = []
# VFS path-resolution tracing (W83 diagnostic).  Emits one `[VFS/resolve]` line
# per directory component traversed in `vfs::resolve_path_opts` and one extra
# line per symlink follow.  Capped at 20 lines per outermost resolve to bound
# log volume.  Implied by `firefox-test`; standalone for headless diagnostic
# runs (e.g. tracking down a hang in a non-Firefox workload).  When neither
# this nor `firefox-test` is enabled, the trace helper compiles to nothing —
# the 1s deadline in `resolve_path_opts` is *not* feature-gated and is always
# on.
vfs-trace = []
# VFS / FAT32 lock-discipline debug-asserts (W92).  When enabled, FAT32
# panics if `inner` is held at any site that issues block-device I/O
# (read_sectors / write_sectors).  Catches accidental re-introductions of
# the spin-Mutex-across-yield deadlock that triggered the W92 scheduler
# bugcheck (sc=1161 under firefox-test).  Off by default — the runtime
# cost is one extra `try_lock` per device call.
vfs-debug = []

[dependencies]
astryx-shared = { path = "../shared" }
spin = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 2
lto = true
debug = 2
strip = "none"
