[package]
name = "astryx-kernel"
version.workspace = true
edition.workspace = true

[features]
default = []
test-mode = []
gui-test = []
firefox-test = []
# Opt-in for the userspace alias_test page-aliasing reproducer (Test 44b).
# Spawns 8 worker threads via raw clone(CLONE_VM|CLONE_THREAD|CLONE_SIGHAND)
# doing MAP_PRIVATE mmap churn; runs >100k page faults; sometimes wedges
# under CI watchdog limits.  Master CI runs without it until the
# underlying worker-thread wedge is resolved; enable for diagnostic runs.
alias-test = []
# Opt-in for the six X11-server protocol-conformance tests (251-256)
# introduced alongside PR #317 (SendEvent routing, ICCCM atom stability,
# PropertyNotify mask, global focus).  Each test in isolation completes,
# but the suite as a whole interacts with firefox_oracle / glibc_hello
# fixtures in a way that pushes wall-clock past the 900 s CI watchdog
# budget.  Master CI runs without them until the interaction is
# investigated; X11 functional changes remain in effect regardless.
x11-tests = []
# Opt-in for the three native-core hardening tests (258-260) introduced
# alongside PR #324 (mm/refcount CAS underflow safety, OB refcount +
# handle-table integration, scheduler starvation diagnostic counter).
# Each test in isolation completes under `--features test-mode` but the
# cumulative wall-clock budget overruns the 900 s CI watchdog when
# combined with firefox-test fixtures.  Master CI runs without them
# until the wall-clock interaction is investigated; native-core
# function-level changes (mm/refcount CAS, ob refcount, sched
# STARVATION_BURST emit) remain in effect regardless of this gate.
native-core-tests = []
# W215 Arm-1 diagnostic infrastructure: the page-cache CRC walker
# (`mm/w215_crc.rs`, ~2 MiB BSS shadow table), the cross-CPU DR0
# write-watchpoint plumbing (`arch/x86_64/debug_reg.rs`, IPI vector 0xF1),
# and the matching `record_insert`/`record_evict` hooks in
# `mm/cache.rs`.  Opt-in because the shadow table alone adds ~2 MiB of
# BSS that the bootloader-side `kernel_size = file_size` accounting does
# not reserve (the flat-binary `kernel.bin` excludes BSS), exposing a
# latent PMM-vs-BSS overlap that can corrupt kernel page tables during
# the firefox-test page-cache prepopulate burst.  Gating the diagnostic
# behind its own feature keeps the demo path's BSS small while
# preserving on-demand investigative access.  Implies `firefox-test`
# because the diagnostic shares the firefox-test cache instrumentation.
w215-diag = ["firefox-test"]
# W133: opt-out for cross-CPU TLB shootdown.  Default builds run the full
# shootdown protocol (IPI vector 0xF0, per-CPU active-CR3 mask).  Enable
# this feature only for bisect/baseline runs where you want to compare
# against the pre-PR behaviour — correctness on SMP requires shootdown.
tlb-shootdown-off = []
# Opt-in "soft-pass" network tests that depend on QEMU SLIRP actually
# delivering ICMP echo replies and forwarding DNS queries.  These tests
# (Test 5 ping 8.8.8.8, Test 6 DNS, Test 32 IPv6 DNS, Test 33 IPv6 ping)
# historically passed even when the operation returned no result, which
# made genuine network-stack regressions invisible in CI.  They are now
# off by default and only built into the runner when this feature is
# enabled alongside `test-mode`.  See docs/HARNESS.md.
network-tests = []
# Re-enables test 82 (Win32 PE32+ hello_win32.exe). Currently hangs the
# headless runner — the embedded PE spins in Ring 3 without calling
# ExitProcess under the current scheduler timing. Off by default.
win32-pe-test = []
# Keep the old 8x16 bitmap rectangle placeholder for title-bar text instead of
# using the GDI text engine. Disabled by default; re-enable if the GDI path
# triggers any rendering issue before it is fully validated.
bitmap-title-fallback = []
# Tier-0 syscall tracing. Emits one `[SC] pid=.. tid=.. nr=.. rip=.. a1=.. a2=.. a3=..`
# line per Linux syscall entry on the serial console. Off by default; enable
# alongside `firefox-test` when debugging user-mode regressions via
# `qemu-harness.py grep <sid> '^\[SC\] '`. See docs/HARNESS.md.
syscall-trace = []
# Verbose firefox-test tracing.  By default `firefox-test` keeps only the
# essential per-syscall pair (`[SC]` / `[SC-RET]` under `syscall-trace`) plus
# boot banners and the periodic `tick=...` heartbeat — the minimum signal
# needed to measure demo throughput.  Enable this flag to also emit
# `[LINUX-SYS]`, `[MMAP]`, `[FFTEST/mmap-so]`, and `[SC-USTACK]` traces, which
# are useful when symbolising libxul stacks or debugging early mmap failures
# but add ~300 bytes of serial output per syscall.  At ~3 KVM VM-exits per
# 16-byte FIFO chunk that extra volume directly pins CPU 2 in the serial
# driver under nested-virt KVM and prevents the post-#140 throughput from
# being observed.  See drivers/serial.rs for the FIFO-batched write path.
firefox-trace-verbose = []
# Tier-0 page-fault tracing. Emits one `[PF] cr2=.. rip=.. code=.. pid=.. tid=..`
# line per #PF (before VMA resolution). Pairs with `syscall-trace` to make a
# full cause-and-effect stream for Ring 3 crashes. See docs/HARNESS.md.
pf-trace = []
# Tier-1 in-kernel debugger. Opens a read-only JSON introspection TCP server
# on port 9999 (proc-list, proc, vfs-mounts, dmesg, syms, mem, trace-status,
# ping). Driven by `scripts/qemu-harness.py kdb`. Default builds are
# byte-identical to the pre-kdb artefact; every code path is cfg-gated.
# See docs/HARNESS.md.
kdb = []
# Builds a self-test for the fault-immune bugcheck banner printer.
# When enabled (alongside `test-mode`), `test_runner::run` first invokes
# `kernel/src/util/no_alloc_fmt.rs::tests::run_self_tests` to validate
# the stack-only formatters, then triggers a deliberate kernel-mode
# page fault and asserts the banner is emitted cleanly with no
# secondary "fault while formatting" message.  The test halts that
# vCPU on completion (the bugcheck path exits QEMU via isa-debug-exit
# in test-mode), so this feature is OFF by default.
bugcheck-test = []
# PR #127 review caveat: direct test of the re-entrancy guard inside
# `ke::bugcheck`.  When enabled, the bugcheck printer takes a fresh
# deliberate #PF *after* it has emitted its full banner, re-entering
# `ke_bugcheck`; the entry-point guard then emits a single
# "RE-ENTERED BUGCHECK" line and exits QEMU.  The harness verifies the
# RE-ENTERED line is present in the serial log and the QEMU exit code
# is the bugcheck-failure code.  Like `bugcheck-test`, this feature
# is mutually exclusive with a clean test-suite pass (the bugcheck
# path exits QEMU before the normal suite finishes), so it is OFF
# by default and gated behind its own CI job.
bugcheck-reentry-test = ["bugcheck-test"]
# Detailed stack dump (128 words from RSP) on every FUTEX_WAIT registration.
# Expensive under IRQs-off (~130ms cli per FUTEX_WAIT); disabled by default
# even in firefox-test. Use `--features futex-wait-scan` explicitly when
# debugging user-mode futex choreography. Pairs with [FUTEX_WAIT_STACK] and
# [FUTEX_WAIT_REG] lines to form a complete per-waiter trace.
futex-wait-scan = []
# QGA (QEMU Guest Agent) transport: enables the virtio-serial driver and the
# `/dev/vport0p0` character device node that the future userspace QGA daemon
# (Phase QGA-2) will open.  Pair with the harness `--features qga` flag,
# which adds the matching `virtio-serial-pci` + `virtserialport` device on
# the host side.  See virtio 1.2 §5.3 (Console Device).
qga = []
# VFS path-resolution tracing (W83 diagnostic).  Emits one `[VFS/resolve]` line
# per directory component traversed in `vfs::resolve_path_opts` and one extra
# line per symlink follow.  Capped at 20 lines per outermost resolve to bound
# log volume.  Implied by `firefox-test`; standalone for headless diagnostic
# runs (e.g. tracking down a hang in a non-Firefox workload).  When neither
# this nor `firefox-test` is enabled, the trace helper compiles to nothing —
# the 1s deadline in `resolve_path_opts` is *not* feature-gated and is always
# on.
vfs-trace = []
# VFS / FAT32 lock-discipline debug-asserts (W92).  When enabled, FAT32
# panics if `inner` is held at any site that issues block-device I/O
# (read_sectors / write_sectors).  Catches accidental re-introductions of
# the spin-Mutex-across-yield deadlock that triggered the W92 scheduler
# bugcheck (sc=1161 under firefox-test).  Off by default — the runtime
# cost is one extra `try_lock` per device call.
vfs-debug = []
# Vfork canary snapshot-pair + sibling-syscall tagger + axis-N+1
# stack-provenance diagnostic (kernel/src/subsys/linux/vfork_diag.rs).
# Emits `[VFORK-CANARY-PRE/POST]`, `[VFORK-FSCANARY-PRE/POST]`,
# `[VFORK-SIB]`, `[STACK-CANARY-WALK]`, `[STACK-CANARY-FINEGRAIN]`,
# `[STACK-PAGE-PROV]`, and `[VFORK-FS28-WATCH]` lines around the
# `CLONE_VM|CLONE_VFORK` parent-block window so a post-processor can
# discriminate between (a) pre-existing zero canary, (b) in-window
# kernel write, and (c) W215-class page-aliasing on the user-stack
# VMA.  Diagnostic-only — no functional behaviour change.  Implies
# `firefox-test` (the snapshot helper rides the same gated emit path),
# `syscall-trace` (the SIB tagger leans on `get_user_rip` /
# `get_user_rsp_rbp`), and `w215-diag` (the master-canary DR0 watch
# uses the same DR0–DR3 plumbing as the W215 cache walker).
# See POSIX vfork(2) / clone(2), Intel SDM Vol. 3A §6.8 + Vol. 3B
# §17.2.4 / §17.2.5, System V x86_64 ABI §6.4.
vfork-canary-diag = ["firefox-test", "syscall-trace", "w215-diag"]
# ELF write-trace diagnostic (kernel/src/subsys/linux/elf_write_trace.rs).
# Arms a hardware write-only watchpoint on the ld-musl `.data.rel.ro`
# slot at user VA `0x7F00_0003_7e18` for the duration of the
# `CLONE_VM | CLONE_VFORK` parent-block window, plus snapshots the
# surrounding bytes before/after.  The watchpoint piggy-backs on the
# W215 four-slot DR0–DR3 plumbing in `arch/x86_64/debug_reg.rs`; any
# kernel-mode write to the watched window fires `#DB` (Intel SDM Vol.
# 3A §6.15) and emits `[W215/DR-WATCH-FIRE] slot=… cpu=… rip=… cr3=…`
# carrying the writer's RIP.  Investigative tool only — gated so master
# builds are byte-identical.  See POSIX vfork(2) / clone(2), Intel SDM
# Vol. 3B §17.2.4 / §17.2.5, System V AMD64 ABI §6.4.  Implies
# `w215-diag` (DR0–DR3 infra) and `firefox-test` (trace formatters).
elf-write-trace = ["w215-diag", "firefox-test"]
# LLVM source-based code-coverage instrumentation (test-coverage audit
# session 5 / docs/TEST_COVERAGE_AUDIT_2026-05-16.md).  When enabled, the
# kernel must additionally be built with `-C instrument-coverage` (see
# scripts/qemu-harness.py `--features coverage` path, which sets RUSTFLAGS
# accordingly).  At test-suite exit the kernel walks the linker-delimited
# `__llvm_prf_cnts` / `__llvm_prf_data` / `__llvm_prf_names` sections plus
# the static `__llvm_covmap` / `__llvm_covfun` regions and emits the bytes
# as hex `[COV-CHUNK]` lines plus a `[COV-SUMMARY]` JSON line containing
# the region-level coverage percentage.  The harness's `coverage`
# subcommand parses these and produces a per-PR-friendly report.  Default
# / firefox-test / test-mode builds remain byte-identical when this
# feature is OFF.  See docs/HARNESS.md.
coverage = []

[dependencies]
astryx-shared = { path = "../shared" }
spin = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 2
lto = true
debug = 2
strip = "none"
